# mcpizza

./: DEPLOYMENT_GUIDE.md  INSTALLATION.md  MCPTOOLS_TESTING.md  PUBLIC_INSTALLATION.md  README.md  TESTING_SUMMARY.md  index.html  package-mcp.json  package.json  pyproject.toml  requirements.txt  test_checkout.py  test_mcpizza.py  test_mcpizza_with_curl.py  test_production.py  test_real_zip.py  test_with_mcptools.sh  vercel.json  web_tester.html
api/: index.py  mcp-http.py  mcp.py  simple-sse.py  sse.py
mcpizza/: config.py  demo_no_real_api.py  exceptions.py  mcp_server.py  mcp_stdio_server.py  production_server.py  server.py  simple_server.py
mcpizza-cloudflare/: README.md  package-lock.json  package.json  wrangler.jsonc
mcpizza-cloudflare/src/: index.ts
mcpizza.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
